[gd_scene load_steps=10 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" path="res://dialogue/balloon.gd" id="1_36de5"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="3_72ixx"]
[ext_resource type="Texture2D" uid="uid://nsanuw0ngoi8" path="res://dialogue/fast_forward_icon.png" id="3_82tot"]
[ext_resource type="AudioStream" uid="uid://r20d2hkqf3ei" path="res://sounds/pen.wav" id="5_8tnlw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0.960387, 0.941689, 0.949251, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0772633, 0.0758308, 0.0681652, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/colors/font_color = Color(0, 0, 0, 1)
Button/styles/disabled = SubResource("StyleBoxFlat_uy0d5")
Button/styles/focus = SubResource("StyleBoxFlat_uy0d5")
Button/styles/hover = SubResource("StyleBoxFlat_uy0d5")
Button/styles/normal = SubResource("StyleBoxFlat_uy0d5")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2snqq"]
bg_color = Color(0.18359, 0.183591, 0.18359, 0.435294)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0tip"]
bg_color = Color(0.394352, 0.394353, 0.394353, 0.435294)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="ExampleBalloon" type="CanvasLayer" groups=["dialogue"]]
process_mode = 3
layer = 100
script = ExtResource("1_36de5")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qq3yp")

[node name="Panel" type="Panel" parent="Balloon"]
clip_children = 2
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -183.0
offset_right = -19.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="Dialogue" type="MarginContainer" parent="Balloon/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/Panel/Dialogue"]
layout_mode = 2

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Panel/Dialogue/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Panel/Dialogue/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Dialogue..."

[node name="SkipButton" type="Button" parent="Balloon/Panel"]
layout_mode = 0
offset_left = 1059.0
offset_top = 14.0
offset_right = 1113.0
offset_bottom = 68.0
scale = Vector2(0.7, 0.7)
theme_override_styles/focus = SubResource("StyleBoxFlat_2snqq")
theme_override_styles/hover = SubResource("StyleBoxFlat_u0tip")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2snqq")
theme_override_styles/normal = SubResource("StyleBoxFlat_2snqq")
icon = ExtResource("3_82tot")

[node name="Responses" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -558.0
offset_right = 494.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 0

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/Responses/ResponsesMenu"]
layout_mode = 2
text = "Response example"

[node name="TalkSound" type="AudioStreamPlayer" parent="." groups=["audio"]]
unique_name_in_owner = true
stream = ExtResource("5_8tnlw")
volume_db = -10.0

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
